2011-06-26  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        [Chromium] Remove WebSecurityOrigin::grantUniversalAccess
        https://bugs.webkit.org/show_bug.cgi?id=63415

        This function has no callers and is downright dangerous.

        * public/WebSecurityOrigin.h:
        * src/WebSecurityOrigin.cpp:

2011-06-26  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        [Chromium] Remove code behind WEBKIT_FRAME_TO_DOCUMENT_API_MOVE
        https://bugs.webkit.org/show_bug.cgi?id=63402

        These old APIs are no longer needed.

        * public/WebFrame.h:
        * src/WebFrameImpl.cpp:
        * src/WebFrameImpl.h:

2011-06-25  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        [Chromium] Update WebKit for WEBKIT_FRAME_TO_DOCUMENT_API_MOVE
        https://bugs.webkit.org/show_bug.cgi?id=63394

        * src/FrameLoaderClientImpl.cpp:
        (WebKit::FrameLoaderClientImpl::dispatchWillPerformClientRedirect):

2011-06-25  Adam Barth  <abarth@webkit.org>

        Roll Chromium DEPS.

        * DEPS:

2011-06-25  Adam Barth  <abarth@webkit.org>

        Unreviewed build fix.  Remove ifdefs around these two functions because
        we're not planning to move them.  This patch makes WebFrameImpl.h
        consistent with WebFrame.h so we can build with the new API
        configuration.

        * src/WebFrameImpl.h:

2011-06-24  Nat Duca  <nduca@chromium.org>

        Unreviewed, rolling out r89694.
        http://trac.webkit.org/changeset/89694
        https://bugs.webkit.org/show_bug.cgi?id=58408

        Test shell still not ready for animate changes.

        * WebKit.gypi:
        * public/WebWidget.h:
        (WebKit::WebWidget::animate):
        (WebKit::WebWidget::composite):
        * src/WebPopupMenuImpl.cpp:
        (WebKit::WebPopupMenuImpl::animate):
        * src/WebPopupMenuImpl.h:
        * src/WebViewImpl.cpp:
        (WebKit::WebViewImpl::resize):