@@ -125,6 +125,7 @@ public:
     virtual void setAllowRunningOfInsecureContent(bool) = 0;
     virtual void setShouldPrintBackgrounds(bool) = 0;
     virtual void setEnableScrollAnimator(bool) = 0;
+    virtual void setHixie76WebSocketProtocolEnabled(bool) = 0;
 
 protected:
     ~WebSettings() { }
