@@ -431,4 +431,13 @@ void WebSettingsImpl::setEnableScrollAnimator(bool enabled)
 #endif
 }
 
+void WebSettingsImpl::setHixie76WebSocketProtocolEnabled(bool enabled)
+{
+#if ENABLE(WEB_SOCKETS)
+    m_settings->setUseHixie76WebSocketProtocol(enabled);
+#else
+    UNUSED_PARAM(enabled);
+#endif
+}
+
 } // namespace WebKit
