@@ -1,3 +1,15 @@
+2011-06-27  Yuta Kitamura  <yutak@chromium.org>
+
+        Reviewed by Adam Barth.
+
+        [Chromium] Add useHixie76WebSocketProtocol to WebSettings
+        https://bugs.webkit.org/show_bug.cgi?id=63424
+
+        * public/WebSettings.h:
+        * src/WebSettingsImpl.cpp:
+        (WebKit::WebSettingsImpl::setHixie76WebSocketProtocolEnabled):
+        * src/WebSettingsImpl.h:
+
 2011-06-26  Adam Barth  <abarth@webkit.org>
 
         Reviewed by Eric Seidel.
